# smart-lamp

./: Cargo.toml  Embed.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
src/: light.rs  main.rs  web_api.rs
src/cyw43-firmware/: README.md
src/ina219/: bus_voltage_range.rs  calibration.rs  config.rs  ina219.rs  measurement_mode.rs  mod.rs  operating_mode.rs  shunt_voltage_gain.rs
src/net/: mod.rs  tcp_ip.rs
src/net/cyw43/: mod.rs
