[package]
edition = "2021"
name = "smart-lamp"
version = "0.0.0"
license = "ISC"

[[bin]]
name = "smart-lamp"
test = false
doctest = false
bench = false

[dependencies]
cortex-m-rt = "0.7.3"
cyw43 = "0.2.0"
cyw43-pio = "0.2.0"
embassy-executor = { version = "0.6.1", features = ["arch-cortex-m", "defmt", "executor-thread", "integrated-timers", "task-arena-size-8192"] }
embassy-net = { version = "0.4.0", features = ["defmt", "tcp", "dhcpv4", "proto-ipv4"] }
embassy-rp = { version = "0.2.0", features = ["defmt", "time-driver", "critical-section-impl", "intrinsics", "rom-v2-intrinsics"] }
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime"] }
defmt = "0.3.8"
defmt-rtt = "0.4.1"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
portable-atomic = { version = "1.9.0", features = ["critical-section"] }
rand = { version = "0.8.5", default-features = false }
static_cell = "2.1.0"

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 0
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "z"
overflow-checks = false

[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 0
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
