[package]
edition = "2021"
name = "smart-lamp"
version = "0.0.0"
license = "ISC"

[[bin]]
name = "smart-lamp"
test = false
doctest = false
bench = false

[dependencies]
cortex-m-rt = "=0.7.5"
cyw43 = "=0.2.0"
cyw43-pio = "=0.2.0"
embassy-executor = { version = "=0.6.3", features = ["arch-cortex-m", "defmt", "executor-thread", "integrated-timers", "task-arena-size-16384"] }
embassy-net = { version = "=0.5.0", features = ["defmt", "tcp", "dhcpv4", "proto-ipv4"] }
embassy-rp = { version = "=0.2.0", features = ["defmt", "time-driver", "critical-section-impl", "intrinsics", "rom-v2-intrinsics"] }
embassy-time = { version = "=0.3.2", features = ["defmt", "defmt-timestamp-uptime"] }
defmt = "=0.3.10"
defmt-rtt = "=0.4.1"
fixed = { version = "=1.28.0", default-features = false }
low-profile = { git = "https://github.com/djcsdy/low-profile", rev = "a4071b9e4a0feb3dc0f4bc758ddb6c0aee890bb5", features = ["defmt", "json"] }
panic-probe = { version = "=0.3.2", features = ["print-defmt"] }
portable-atomic = { version = "=1.11.0", features = ["critical-section"] }
rand = { version = "=0.8.5", default-features = false }
serde = { version = "=1.0.218", default-features = false, features = ["derive"] }
static_cell = "=2.1.0"

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 0
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "z"
overflow-checks = false

[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 0
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
